refactor: update the architecture for OAUTH and SUNO implementaion
