# backend/music/models/__init__.py
@@ -1,5 +1,6 @@
 from .music_creator import MusicCreator
 from .library import Library
 from .song import Song
+from .generation_job import GenerationJob
 
-__all__ = ['MusicCreator', 'Library', 'Song']
+__all__ = ['MusicCreator', 'Library', 'Song', 'GenerationJob']
